deploy/k8s/base/gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: smartdesk-canary
spec:
  selector:
    app: gateway
  ports:
    - port: 80
      targetPort: 3000
