deploy/k8s/base/gateway/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway
  namespace: smartdesk-canary
  annotations:
    nginx.ingress.kubernetes.io/canary: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: api.smartdesk.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway-stable
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-canary
  namespace: smartdesk-canary
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "5"
spec:
  ingressClassName: nginx
  rules:
    - host: api.smartdesk.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway-canary
                port:
                  number: 80
